kubernetes/network-policies/appointment-db-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: appointment-db-policy
  namespace: hospital

spec:
  podSelector:
    matchLabels:
      app: mysql-appointment

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: appointment

      ports:
        - protocol: TCP
          port: 3306
