kubernetes/network-policies/doctor-db-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: doctor-db-policy
  namespace: hospital

spec:
  podSelector:
    matchLabels:
      app: mysql-doctor

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: doctor

      ports:
        - protocol: TCP
          port: 3306
